adds style & js

--- a/kangaroos.html
+++ b/kangaroos.html
@@ -13,13 +13,18 @@
 
 <body>
     <nav class="nav-bar">
-    <div class="nav-bar-item navbar-left">Australia</div>
+    <div class="nav-bar-item navbar-left">Kangaroos</div>
     <ul class="nav-bar-menu">
         <li class="nav-bar-item navbar-right"><a href="#">Vegemite</a></li>
         <li class="nav-bar-item navbar-right"><a href="#">blooming onions</a></li>
-        <li class="nav-bar-item navbar-right"><a href="./kangaroos.html">kangaroos</a></li>
+        <li class="nav-bar-item navbar-right"><a href="#">kangaroos</a></li>
         <li class="nav-bar-item navbar-right"><a href="#">Ned Kelly</a></li>
     </ul>
 </nav>
+<div class="joke-container">
+    <h1>Where do kangaroos like to eat?</h1>
+    <button type="button" id="button">Click for punchline</button>
+</div>
+<script src="./main.js"></script>
 </body>
 </html>
