adds form w/ submit btn

--- a/kangaroos.html
+++ b/kangaroos.html
@@ -25,6 +25,16 @@
     <h1>Where do kangaroos like to eat?</h1>
     <button type="button" id="button">Click for punchline</button>
 </div>
+<p>
+    <fieldset>
+        <legend>Have you ever been to Australia?</legend>
+        <select>
+            <option>Yes</option>
+            <option>No</option>
+        </select>
+        <button id="submitBtn">Submit</button>
+    </fieldset>
+</p>
 <script src="./main.js"></script>
 </body>
 </html>
